selfhost/test/typechecker/set/error_type_mismatch_item.4.out
Error at %FILE_NAME%:1:7
Type mismatch
  |  #{[], #{}, [1, 2]}
           ^
Expected: Int[]
but instead found: Set<<unknown>>
